--- a/bookdown/04-bcfr.Rmd
+++ b/bookdown/04-bcfr.Rmd
@@ -4,7 +4,7 @@ The Boreal Chorus Frog (*Pseudacris maculata*) is distributed throughout the ent
 
 ## Distribution
 
-The Boreal Chorus Frog was very abundant in our data set and was detected at 68.6\% of 1648 survey locations. 
+The Boreal Chorus Frog was abundant in our data set and was detected at 68.6\% of 1648 survey locations. 
 
 <center>
 ![The occurrence of Boreal Chorus Frog detected between 2013-2021 at ABMI and BU locations.](Amphibians_files/figure-html/occurrence/BCFR-sampling_2022-01-20.png){width=80%}
@@ -22,41 +22,41 @@ With 4543 unique recordings of Boreal Chorus Frog, we were able to determine an 
 
 ## Vegetation Models
 
-We were able to create a SDM using the vegetation land cover information with good fit (AUC = 0.81). The vegetation based model indicated that this species is predicted to have high abundance in native wetland (bogs, fens, swamps) and open upland (grass, shrub) habitats in addition to high abundance in crops, rough pasture, tame pasture, cut-blocks, and urban industrial footprints. 
+We were able to create a SDM using the vegetation landcover information with good fit (AUC = 0.81). The vegetation based model indicated that this species is predicted to have high abundance in native wetland (bogs, fens, swamps) and open upland (grass, shrub) habitats. In addition, we predicted high abundance in crops, rough pasture, tame pasture, cut-blocks, and urban industrial footprints. 
 
 <center>
-![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of vegetation and human footprint types in the forested region. Black vertical lines represent 90/% confidence intervals and blue vertical lines are added to forest types where harvesting occurs  and shows the predicted species abundance in cut-blocks of various ages.](Amphibians_files/figure-html/coefficients/north/BCFR_2022-01-20.png)
+![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of vegetation and human footprint types in the forested region. Black vertical lines represent 90% confidence intervals and blue vertical lines are added to forest types where harvesting occurs and shows the predicted species abundance in harvest areas of various ages.](Amphibians_files/figure-html/coefficients/north/BCFR_2022-01-20.png)
 
 </center>
 
 The spatial and climate component indicated positive relationships with Mean Warm Month Temperature and a non-linear relationship with the amount of open water.
 
 <center>
-![The spatial and climate components from the vegetation based model for Boreal Chorus Frog.](Amphibians_files/figure-html/coefficients/north/BCFR_climate_2022-01-20.png){width=60%}
+![The spatial and climate coefficients from the vegetation based model for Boreal Chorus Frog.](Amphibians_files/figure-html/coefficients/north/BCFR_climate_2022-01-20.png){width=60%}
 
 </center>
 
 ## Soil Models
 
-We were able to create a SDM using the soil land cover information with moderate fit (AUC = 0.77). The soil based models predicted similar levels of abundance in all native and human footprint landcover types. There was minimal effect between treed and non-treed sites. 
+We were able to create a SDM using the soil landcover information with moderate fit (AUC = 0.77). The soil based models predicted similar levels of abundance in all native and human footprint landcover types. There was minimal effect between treed and non-treed sites. 
 
 <center>
-![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of soil and human footprint types in the prairie region. Black vertical lines represent 90/% confidence intervals. The presence/absence of trees affects the presence and abundance of many species; therefore, separate figures are presented for treed and non-treed sites in the prairie region.](Amphibians_files/figure-html/coefficients/south/BCFR-combined_2022-01-20.png)
+![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of soil and human footprint types in the prairie region. Black vertical lines represent 90% confidence intervals. The presence/absence of trees affects the presence and abundance of many species; therefore, separate figures are presented for treed and non-treed sites in the prairie region.](Amphibians_files/figure-html/coefficients/south/BCFR-combined_2022-01-20.png)
 
 </center>
 
 The spatial and climate component indicated positive relationships with Mean Warm Month Temperature and latitude, a non-linear relationship with the amount of open water, and a negative relationship with longitude.
 
 <center>
-![The spatial and climate components from the soil based model for Boreal Chorus Frog.](Amphibians_files/figure-html/coefficients/south/BCFR_climate_2022-01-20.png){width=60%}
+![The spatial and climate coefficients from the soil based model for Boreal Chorus Frog.](Amphibians_files/figure-html/coefficients/south/BCFR_climate_2022-01-20.png){width=60%}
 
 </center>
 
 ## Linear Features
 
-We estimate the impacts of four types of linear features: Energy seismic lines (wide and narrow), Energy soft linear (transmission lines, pipelines), Hard linear (roads and rails), Transportation soft linear (road verges). We predicted the change to species relative abundance inside areas that have been disturbed by each linear feature class compared to the habitat it replaced (modeled reference condition with no human footprint). Effects less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
+We estimate the impacts of four types of linear features: Energy seismic lines (wide and narrow), energy soft linear (transmission lines, pipelines), hard linear (roads and rails), and transportation soft linear (road verges). We predicted the change of species relative abundance inside areas that have been disturbed by each linear feature class compared to the habitat it replaced (modeled reference condition with no human footprint). Effects less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
 
-Boreal Chorus Frog was predicted to increase in all linear feature types based on the vegetation models, while decreasing based in the soil models.
+Boreal Chorus Frog was predicted to increase in all linear feature types based on the vegetation models (left). However, we observed decreased abundance in energy seismic, energy soft linear, and transportation soft linear features based on the soil models right).
 
 <center>
 ![Effects of linear features based on the vegetation models.](Amphibians_files/figure-html/sectoreffects/north/BCFR-linear-features.png){width=45%} ![Effects of linear features based on the soil models.](Amphibians_files/figure-html/sectoreffects/south/BCFR-linear-features.png){width=45%}
@@ -65,24 +65,23 @@ Boreal Chorus Frog was predicted to increase in all linear feature types based o
 
 ## Predicted Abundance
 
-Under reference conditions, Boreal Chorus Frog is predicted to be moderately abundant throughout all Natural Regions except the Rocky Mountains (left). Under current landcover conditions (2018 footprint) we observe high abundance throughout the Grassland and Parkland natural regions (right).
+Under reference conditions, Boreal Chorus Frog is predicted to be moderately abundant throughout all natural regions except the Rocky Mountains (left). Under current landcover conditions (2018 footprint) we observe high abundance throughout the Grassland and Parkland natural regions (right).
 
 <center>
-![The predicted relative abundance of Boreal Chorus Frog as a function of vegetation, soil, human footprint, and space/cliamte across Alberta under reference conditions.](Amphibians_files/figure-html/maps/BCFR_reference-abundance_2022-02-08.png){width=45%} ![The predicted relative abundance of Boreal Chorus Frog as a function of vegetation, soil, human footprint, and space/cliamte across Alberta under current conditions (2018).](Amphibians_files/figure-html/maps/BCFR_current-abundance_2022-02-08.png){width=45%} 
+![The predicted relative abundance of Boreal Chorus Frog as a function of vegetation, soil, human footprint, and space/climate across Alberta under reference conditions.](Amphibians_files/figure-html/maps/BCFR_reference-abundance_2022-02-08.png){width=45%} ![The predicted relative abundance of Boreal Chorus Frog as a function of vegetation, soil, human footprint, and space/climate across Alberta under current conditions (2018).](Amphibians_files/figure-html/maps/BCFR_current-abundance_2022-02-08.png){width=45%} 
 
 </center>
 
-We predicted increases in suitable habitat for Boreal Chorus Frog throughout the Parkland Natural Region. This is driven by our models predicting high abundance in agricultural footprint types.
+Overall, we predicted increases in suitable habitat for Boreal Chorus Frog throughout the Parkland natural region. This is driven by our models predicting high abundance in agricultural footprint types.
 
 <center>
-![The change in predicted relative abundance of Boreal Chorus Frog as a function of vegetation, soil, human footprint, and space/cliamte across Alberta between reference and current condition (2018 footprint).](Amphibians_files/figure-html/maps/BCFR_difference_2022-02-08.png){width=80%} 
+![The change in predicted relative abundance of Boreal Chorus Frog as a function of vegetation, soil, human footprint, and space/climate across Alberta between reference and current condition (2018 footprint).](Amphibians_files/figure-html/maps/BCFR_difference_2022-02-08.png){width=80%} 
 
 </center>
 
 ## Sector Effects
 
 Local sector effects represent the change to species relative abundance inside areas that have been disturbed by each sector (human footprint type) compared to the habitat it replaced (modeled reference condition with no human footprint). Sector effect values less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
-
 
 Regional sector effects represent the change in the total regional population by industrial sector for species. This incorporates the area of the footprint, the native habitats where the footprint occurs, and the species response to a particular footprint. Regional population effect values less than 0% indicate a predicted decrease in the regional population due to a particular sector’s footprint, and values greater than 0% indicate a predicted increase.
 
