--- a/bookdown/05-cato.Rmd
+++ b/bookdown/05-cato.Rmd
@@ -22,41 +22,41 @@ With 675 unique recordings of Canadian Toad, we were able to determine an optima
 
 ## Vegetation Models
 
-We were able to create a SDM using the vegetation land cover information with good fit (AUC = 0.92). Our model indicated that Canadian Toad is predicted to have abundance in young pine, young bog, and shruby bog and fen native habitats. We predicted low abundance in all human footprint types except urban industrial and industrial rural types. 
+We were able to create a SDM using the vegetation landcover information with good fit (AUC = 0.92). Our model indicated that Canadian Toad is predicted to have abundance in young pine, young bog, and shruby bog and fen native habitats. In addition, we predicted low abundance in all human footprint types except urban industrial and industrial rural types. 
 
 <center>
-![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of vegetation and human footprint types in the forested region. Black vertical lines represent 90/% confidence intervals and blue vertical lines are added to forest types where harvesting occurs  and shows the predicted species abundance in cut-blocks of various ages.](Amphibians_files/figure-html/coefficients/north/CATO_2022-01-20.png)
+![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of vegetation and human footprint types in the forested region. Black vertical lines represent 90% confidence intervals and blue vertical lines are added to forest types where harvesting occurs and shows the predicted species abundance in harvest areas of various ages.](Amphibians_files/figure-html/coefficients/north/CATO_2022-01-20.png)
 
 </center>
 
 The spatial and climate component indicated weak relationships except for a strong non-linear relationship with the amount of open water.
 
 <center>
-![The spatial and climate components from the vegetation based model for Canadian Toad.](Amphibians_files/figure-html/coefficients/north/CATO_climate_2022-01-20.png){width=60%}
+![The spatial and climate coefficients from the vegetation based model for Canadian Toad.](Amphibians_files/figure-html/coefficients/north/CATO_climate_2022-01-20.png){width=60%}
 
 </center>
 
 ## Soil Models
 
-We were able to create a SDM using the soil land cover information with moderate good (AUC = 0.86). The soil based models predicted high levels of abundance in native soil classes, and low abundance in footprint types. There was no effect between treed and non-treed sites. 
+We were able to create a SDM using the soil landcover information with good fit (AUC = 0.86). The soil based models predicted high levels of abundance in native soil classes, and low abundance in footprint types. There was no effect between treed and non-treed sites. 
 
 <center>
-![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of soil and human footprint types in the prairie region. Black vertical lines represent 90/% confidence intervals. The presence/absence of trees affects the presence and abundance of many species; therefore, separate figures are presented for treed and non-treed sites in the prairie region.](Amphibians_files/figure-html/coefficients/south/CATO-combined_2022-01-20.png)
+![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of soil and human footprint types in the prairie region. Black vertical lines represent 90% confidence intervals. The presence/absence of trees affects the presence and abundance of many species; therefore, separate figures are presented for treed and non-treed sites in the prairie region.](Amphibians_files/figure-html/coefficients/south/CATO-combined_2022-01-20.png)
 
 </center>
 
 The spatial and climate component indicated positive relationships with Mean Warm Month Temperature and Mean Annual Temperature.
 
 <center>
-![The spatial and climate components from the soil based model for Canadian Toad.](Amphibians_files/figure-html/coefficients/south/CATO_climate_2022-01-20.png){width=60%}
+![The spatial and climate coefficients from the soil based model for Canadian Toad.](Amphibians_files/figure-html/coefficients/south/CATO_climate_2022-01-20.png){width=60%}
 
 </center>
 
 ## Linear Features
 
-We estimate the impacts of four types of linear features: Energy seismic lines (wide and narrow), Energy soft linear (transmission lines, pipelines), Hard linear (roads and rails), Transportation soft linear (road verges). We predict the change to species relative abundance inside areas that have been disturbed by each linear feature class compared to the habitat it replaced (modeled reference condition with no human footprint). Effects less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
+We estimate the impacts of four types of linear features: Energy seismic lines (wide and narrow), energy soft linear (transmission lines, pipelines), hard linear (roads and rails), and transportation soft linear (road verges). We predict the change to species relative abundance inside areas that have been disturbed by each linear feature class compared to the habitat it replaced (modeled reference condition with no human footprint). Effects less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
 
-The vegetation based models indicate that Canadian Toad decreased in energy based linear features, while increasing in both hard and soft linear features based on transportation. However, based on the soil models, Canadian Toad was predicted to increase in soft linear features, while decrease in hard linear features.
+The vegetation based models indicate that Canadian Toad decreased in energy based linear features, while increasing in both hard and soft linear features based on transportation (left). However, the soil models indicated that Canadian Toad was predicted to increase in soft linear features, while decrease in hard linear features (right).
 
 <center>
 ![Species relative abundance predicted for habitat with no human footprint compared to habitat in which 10% of the area is converted to either soft or hard linear footprint.](Amphibians_files/figure-html/sectoreffects/north/CATO-linear-features.png){width=45%} ![Species relative abundance predicted for habitat with no human footprint compared to habitat in which 10% of the area is converted to either soft or hard linear footprint.](Amphibians_files/figure-html/sectoreffects/south/CATO-linear-features.png){width=45%}
@@ -68,14 +68,14 @@ The vegetation based models indicate that Canadian Toad decreased in energy base
 Under both reference (left) and current (right) conditions, Canadian Toad is predicted to have moderate abundance throughout the eastern portion of Alberta.
 
 <center>
-![The predicted relative abundance of Canadian Toad as a function of vegetation, soil, human footprint, and space/cliamte across Alberta under reference conditions.](Amphibians_files/figure-html/maps/CATO_reference-abundance_2022-02-08.png){width=45%}![The predicted relative abundance of Canadian Toad as a function of vegetation, soil, human footprint, and space/cliamte across Alberta under current conditions (2018).](Amphibians_files/figure-html/maps/CATO_current-abundance_2022-02-08.png){width=45%} 
+![The predicted relative abundance of Canadian Toad as a function of vegetation, soil, human footprint, and space/climate across Alberta under reference conditions.](Amphibians_files/figure-html/maps/CATO_reference-abundance_2022-02-08.png){width=45%}![The predicted relative abundance of Canadian Toad as a function of vegetation, soil, human footprint, and space/climate across Alberta under current conditions (2018).](Amphibians_files/figure-html/maps/CATO_current-abundance_2022-02-08.png){width=45%} 
 
 </center>
 
 We predicted decreases in suitable habitat for Canadian Toad throughout the eastern portion of the Grasslands natural region. This is driven by our models predicting low abundance in agricultural footprint types.
 
 <center>
-![The change in predicted relative abundance of Canadian Toad as a function of vegetation, soil, human footprint, and space/cliamte across Alberta between reference and current condition (2018 footprint).](Amphibians_files/figure-html/maps/CATO_difference_2022-02-08.png){width=80%} 
+![The change in predicted relative abundance of Canadian Toad as a function of vegetation, soil, human footprint, and space/climate across Alberta between reference and current condition (2018 footprint).](Amphibians_files/figure-html/maps/CATO_difference_2022-02-08.png){width=80%} 
 
 </center>
 
@@ -83,12 +83,11 @@ We predicted decreases in suitable habitat for Canadian Toad throughout the east
 
 Local sector effects represent the change to species relative abundance inside areas that have been disturbed by each sector (human footprint type) compared to the habitat it replaced (modeled reference condition with no human footprint). Sector effect values less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
 
-
 Regional sector effects represent the change in the total regional population by industrial sector for species. This incorporates the area of the footprint, the native habitats where the footprint occurs, and the species response to a particular footprint. Regional population effect values less than 0% indicate a predicted decrease in the regional population due to a particular sector’s footprint, and values greater than 0% indicate a predicted increase.
 
 ### Forested Region
 
-We predicted that Canadian Toad has local negative response to agriculture, energy, and forestry footprint in this region. There is a small local response to the urban/industrial and transportation sectors. However, we only observed small changes in the regional sector effect.
+We predicted that Canadian Toad has local negative response to agriculture, energy, and forestry footprint in this region. There is a small positive response to the urban/industrial and transportation sectors. However, we only observed small changes in the regional sector effect.
 
 <center>
 ![Regional (left) and local (right) sector effects for Canadian Toad within the Forested Region](Amphibians_files/figure-html/sectoreffects/north/CATO.png)
