--- a/bookdown/11-wofr.Rmd
+++ b/bookdown/11-wofr.Rmd
@@ -13,7 +13,7 @@ The Wood Frog was common in our data set and was detected at 41.9\% of 1648 surv
 
 ## Seasonality
 
-Wood Frog was the second most abundant species detected With 1482 unique recordings. Using this information, we were able to determine an optimal survey period. This species was vocalizing between early April to late July, with a peak calling frequency in early May.
+Wood Frog was the second most abundant species detected With 1482 unique recordings. Using this information, we were able to determine an optimal survey period. This species was vocalizing between early April to late July, with a peak calling frequency in early May. 
 
 <center>
 ![The frequency of detections across sites aggregated by Julian calendar day.](Amphibians_files/figure-html/seasonality/all/WOFR-seasonality_2022-01-20.png)
@@ -22,41 +22,41 @@ Wood Frog was the second most abundant species detected With 1482 unique recordi
 
 ## Vegetation Models
 
-We were able to create a SDM using the vegetation land cover information with moderate fit (AUC = 0.74). The vegetation based model indicated that this species is predicted to have high abundance in native wetland (bogs, fens, swamps) and treed bog habitats in addition to high abundance in crops, rough pasture, tame pasture, cut-blocks, and urban industrial footprints. 
+We were able to create a SDM using the vegetation landcover information with moderate fit (AUC = 0.74). The vegetation based model indicated that this species is predicted to have high abundance in native wetland (bogs, fens, swamps) and treed bog habitats in addition to high abundance in crops, rough pasture, tame pasture, harvest areas, and urban industrial footprints. 
 
 <center>
-![The predicted relative abundance (bars) of Wood Frog as a function of vegetation and human footprint types in the forested region. Black vertical lines represent 90/% confidence intervals and blue vertical lines are added to forest types where harvesting occurs  and shows the predicted species abundance in cut-blocks of various ages.](Amphibians_files/figure-html/coefficients/north/WOFR_2022-01-20.png)
+![The predicted relative abundance (bars) of Wood Frog as a function of vegetation and human footprint types in the forested region. Black vertical lines represent 90% confidence intervals and blue vertical lines are added to forest types where harvesting occurs and shows the predicted species abundance in harvest areas of various ages.](Amphibians_files/figure-html/coefficients/north/WOFR_2022-01-20.png)
 
 </center>
 
 The spatial and climate component indicated positive relationships with longitude and the amount of open water.
 
 <center>
-![The spatial and climate components from the vegetation based model for Wood Frog.](Amphibians_files/figure-html/coefficients/north/WOFR_climate_2022-01-20.png){width=60%}
+![The spatial and climate coefficients from the vegetation based model for Wood Frog.](Amphibians_files/figure-html/coefficients/north/WOFR_climate_2022-01-20.png){width=60%}
 
 </center>
 
 ## Soil Models
 
-We were able to create a SDM using the soil land cover information with moderate fit (AUC = 0.82). The soil based models predicted higher abundance in loamy, sandy/loamy, and clay soil classes and high abundance in all footprint types. There was a strong positive effect between treed and non-treed sites.
+We were able to create a SDM using the soil landcover information with moderate fit (AUC = 0.82). The soil based models predicted higher abundance in loamy, sandy/loamy, and clay soil classes and high abundance in all footprint types. There was a strong positive effect between treed and non-treed sites.
 
 <center>
-![The predicted relative abundance (bars) of Wood Frog as a function of soil and human footprint types in the prairie region. Black vertical lines represent 90/% confidence intervals. The presence/absence of trees affects the presence and abundance of many species; therefore, separate figures are presented for treed and non-treed sites in the prairie region.](Amphibians_files/figure-html/coefficients/south/WOFR-combined_2022-01-20.png)
+![The predicted relative abundance (bars) of Wood Frog as a function of soil and human footprint types in the prairie region. Black vertical lines represent 90% confidence intervals. The presence/absence of trees affects the presence and abundance of many species; therefore, separate figures are presented for treed and non-treed sites in the prairie region.](Amphibians_files/figure-html/coefficients/south/WOFR-combined_2022-01-20.png)
 
 </center>
 
 The spatial and climate component indicated a negative relationship with longitude and a positive relationship with the amount of open water.
 
 <center>
-![The spatial and climate components from the soil based model for Wood Frog.](Amphibians_files/figure-html/coefficients/south/WOFR_climate_2022-01-20.png){width=60%}
+![The spatial and climate coefficients from the soil based model for Wood Frog.](Amphibians_files/figure-html/coefficients/south/WOFR_climate_2022-01-20.png){width=60%}
 
 </center>
 
 ## Linear Features
 
-We estimate the impacts of four types of linear features: Energy seismic lines (wide and narrow), Energy soft linear (transmission lines, pipelines), Hard linear (roads and rails), Transportation soft linear (road verges). We predicted the change to species relative abundance inside areas that have been disturbed by each linear feature class compared to the habitat it replaced (modeled reference condition with no human footprint). Effects less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
+We estimate the impacts of four types of linear features: Energy seismic lines (wide and narrow), energy soft linear (transmission lines, pipelines), hard linear (roads and rails), and transportation soft linear (road verges). We predicted the change to species relative abundance inside areas that have been disturbed by each linear feature class compared to the habitat it replaced (modeled reference condition with no human footprint). Effects less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
 
-The vegetation based models indicate that Wood Frog increased in all linear feature types. The soil based models also indicated the same pattern except for a slight increase in Energy Soft Linear features.
+The vegetation based models indicate that Wood Frog increased in all linear feature types (left). The soil based models also indicated the same pattern except for a slight increase in Energy Soft Linear features (right).
 
 <center>
 ![Effects of linear features based on the vegetation models.](Amphibians_files/figure-html/sectoreffects/north/WOFR-linear-features.png){width=45%} ![Effects of linear features based on the soil models.](Amphibians_files/figure-html/sectoreffects/south/WOFR-linear-features.png){width=45%}
@@ -65,18 +65,18 @@ The vegetation based models indicate that Wood Frog increased in all linear feat
 
 ## Predicted Abundance
 
-Under reference conditions, Wood Frog is predicted to be moderately abundant throughout all Natural Regions except areas of the Rocky Mountains and Grasslands (left). Under current landcover conditions (2018 footprint) we observe similar abundance throughout these Natural Regions (right).
+Under reference conditions, Wood Frog is predicted to be moderately abundant throughout all natural regions except areas of the Rocky Mountains and Grasslands (left). Under current landcover conditions (2018 footprint) we observe similar abundance throughout these natural regions (right).
 
 <center>
-![The predicted relative abundance of Wood Frog as a function of vegetation, soil, human footprint, and space/cliamte across Alberta under reference conditions.](Amphibians_files/figure-html/maps/WOFR_reference-abundance_2022-02-08.png){width=45%} ![The predicted relative abundance of Wood Frog as a function of vegetation, soil, human footprint, and space/cliamte across Alberta under current conditions (2018).](Amphibians_files/figure-html/maps/WOFR_current-abundance_2022-02-08.png){width=45%}
+![The predicted relative abundance of Wood Frog as a function of vegetation, soil, human footprint, and space/climate across Alberta under reference conditions.](Amphibians_files/figure-html/maps/WOFR_reference-abundance_2022-02-08.png){width=45%} ![The predicted relative abundance of Wood Frog as a function of vegetation, soil, human footprint, and space/climate across Alberta under current conditions (2018).](Amphibians_files/figure-html/maps/WOFR_current-abundance_2022-02-08.png){width=45%}
 
 </center>
 
 
-We predicted increases in suitable habitat for Wood Frog throughout the Parkland Natural Region. This is driven by our models predicting high abundance in agricultural footprint types.
+We predicted increases in suitable habitat for Wood Frog throughout the Parkland natural region. This is driven by our models predicting high abundance in agricultural footprint types.
 
 <center>
-![The change in predicted relative abundance of Wood Frog as a function of vegetation, soil, human footprint, and space/cliamte across Alberta between reference and current condition (2018 footprint).](Amphibians_files/figure-html/maps/WOFR_difference_2022-02-08.png){width=80%} 
+![The change in predicted relative abundance of Wood Frog as a function of vegetation, soil, human footprint, and space/climate across Alberta between reference and current condition (2018 footprint).](Amphibians_files/figure-html/maps/WOFR_difference_2022-02-08.png){width=80%} 
 
 </center>
 
@@ -84,7 +84,6 @@ We predicted increases in suitable habitat for Wood Frog throughout the Parkland
 ## Sector Effects
 
 Local sector effects represent the change to species relative abundance inside areas that have been disturbed by each sector (human footprint type) compared to the habitat it replaced (modeled reference condition with no human footprint). Sector effect values less than 0% indicate habitat suitability is reduced (predicted related abundance is lower) compared to reference conditions, and values more than 0% indicate habitat suitability is improved (predicted relative abundance is higher) compared to reference conditions.
-
 
 Regional sector effects represent the change in the total regional population by industrial sector for species. This incorporates the area of the footprint, the native habitats where the footprint occurs, and the species response to a particular footprint. Regional population effect values less than 0% indicate a predicted decrease in the regional population due to a particular sector’s footprint, and values greater than 0% indicate a predicted increase.
 
