Correction of sector effect images.

--- a/bookdown/05-cato.Rmd
+++ b/bookdown/05-cato.Rmd
@@ -87,7 +87,7 @@ Regional sector effects represent the change in the total regional population by
 
 ### Forested Region
 
-We predicted that Canadian Toad has local negative response to agriculture, energy, and forestry footprint in this region. There is a small positive response to the urban/industrial and transportation sectors. However, we only observed small changes in the regional sector effect.
+We predicted that Canadian Toad has local negative response to agriculture, energy, forestry, and urban/industrial footprint in this region. There is a small positive response to the transportation sector. However, we only observed small changes in the regional sector effect.
 
 <center>
 ![Regional (left) and local (right) sector effects for Canadian Toad within the Forested Region](Amphibians_files/figure-html/sectoreffects/north/CATO.png)
@@ -96,7 +96,7 @@ We predicted that Canadian Toad has local negative response to agriculture, ener
 
 ### Prairie Region
 
-We predicted that Canadian Toad has local negative response to agriculture, forestry, and urban industrial footprint in this region. There is a positive local response to the energy and transportation sectors. However, we only observed a large negative response at the regional scale driven by agriculture that outweighs the positive effects of the energy and transportation sectors.
+We predicted that Canadian Toad has local negative response to agriculture, and urban industrial footprint in this region. There is a positive local response to the energy and transportation sectors. However, we observed a large negative response at the regional scale driven by agriculture that outweighs the positive effects of the energy and transportation sectors.
 
 <center>
 ![Regional (left) and local (right) sector effects for Boreal Chorus Frog within the Prairie Region](Amphibians_files/figure-html/sectoreffects/south/CATO.png)
