--- a/bookdown/04-bcfr.Rmd
+++ b/bookdown/04-bcfr.Rmd
@@ -87,7 +87,7 @@ Regional sector effects represent the change in the total regional population by
 
 ### Forested Region
 
-We predicted that Boreal Chorus Frog has local positive responses to all sectors within this region. In addition, we observe a small regional effect of agriculture. 
+We predicted that Boreal Chorus Frog has local positive responses to all sectors within this region. In addition, we observe a moderate regional effect of agriculture. 
 
 <center>
 ![Regional (left) and local (right) sector effects for Boreal Chorus Frog within the Forested Region](Amphibians_files/figure-html/sectoreffects/north/BCFR.png)
@@ -96,7 +96,7 @@ We predicted that Boreal Chorus Frog has local positive responses to all sectors
 
 ### Prairie Region
 
-We predicted that Boreal Chorus Frog has local positive response to all sectors within this region. However, the responses are strongest for agriculture, forestry, and urban/industrial footprint types. In addition, we observe a moderate regional effect of agriculture. 
+We predicted that Boreal Chorus Frog has local positive response to agriculture and urban industrial footprints. However, the responses are strongest for agriculture, forestry, and urban/industrial footprint types. In addition, we observe a small regional effect of agriculture. 
 
 <center>
 ![Regional (left) and local (right) sector effects for Boreal Chorus Frog within the Prairie Region](Amphibians_files/figure-html/sectoreffects/south/BCFR.png)
