--- a/bookdown/05-cato.Rmd
+++ b/bookdown/05-cato.Rmd
@@ -25,7 +25,7 @@ With 675 unique recordings of Canadian Toad, we were able to determine an optima
 We were able to create a SDM using the vegetation landcover information with good fit (AUC = 0.92). Our model indicated that Canadian Toad is predicted to have abundance in young pine, young bog, and shruby bog and fen native habitats. In addition, we predicted low abundance in all human footprint types except urban industrial and industrial rural types. 
 
 <center>
-![The predicted relative abundance (bars) of Boreal Chorus Frog as a function of vegetation and human footprint types in the forested region. Black vertical lines represent 90% confidence intervals and blue vertical lines are added to forest types where harvesting occurs and shows the predicted species abundance in harvest areas of various ages.](Amphibians_files/figure-html/coefficients/north/CATO_2022-01-20.png)
+![The predicted relative abundance (bars) of Canadian Toad as a function of vegetation and human footprint types in the forested region. Black vertical lines represent 90% confidence intervals and blue vertical lines are added to forest types where harvesting occurs and shows the predicted species abundance in harvest areas of various ages.](Amphibians_files/figure-html/coefficients/north/CATO_2022-01-20.png)
 
 </center>
 
